--- a/app/src/main/res/layout/activity_register_seller.xml
+++ b/app/src/main/res/layout/activity_register_seller.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".views.RegisterSeller">
+    tools:context=".views.activities.RegisterSeller">
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="150dp"
         android:layout_height="120dp"
