--- a/app/src/main/res/layout/activity_register_seller.xml
+++ b/app/src/main/res/layout/activity_register_seller.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".views.activities.RegisterSeller">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="150dp"
         android:layout_height="120dp"
@@ -141,5 +145,6 @@
         android:backgroundTint="@color/colorPrimaryDark"
         android:textColor="#F3F2F2"
         />
+    </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
