--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="50dp"
-        android:id="@+id/logout"
-        android:layout_margin="100dp"
-        android:text="Logout"/>
+        android:text="Available Businesses"
+        android:textSize="30dp"
+        android:layout_marginLeft="70dp"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:id="@+id/RV"/>
 
 
 </LinearLayout>
